// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue/UITextfield renders correctly - autocomplete off 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - basic 1`] = `
"<div class=\\"ui-textfield ui-textfield--large\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - disabled 1`] = `
"<div class=\\"ui-textfield ui-textfield--disabled\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" disabled=\\"disabled\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - readonly 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" readonly=\\"readonly\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with helper 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div> <span class=\\"ui-textfield__helper\\">Text</span>
</div>"
`;

exports[`vue/UITextfield renders correctly - with id 1`] = `
"<div id=\\"test\\" class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with label 1`] = `
"<div class=\\"ui-textfield\\"><label for=\\"z8a8d7a5zad4\\" class=\\"ui-textfield__label\\"><strong>Text</strong></label>
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with left icon 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\"><i role=\\"button\\" tabindex=\\"0\\" class=\\"ui-textfield__wrapper__icon\\">star</i> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with listeners 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\"><i role=\\"button\\" tabindex=\\"0\\" class=\\"ui-textfield__wrapper__icon\\">star</i> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with placeholder 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" placeholder=\\"text\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with right icon 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\"> <i role=\\"button\\" tabindex=\\"0\\" class=\\"ui-textfield__wrapper__icon\\">star</i></div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with transform and allowedPattern 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" maxlength=\\"10\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with type number 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" max=\\"30\\" min=\\"0\\" step=\\"10\\" autocomplete=\\"on\\" type=\\"number\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with type text 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" size=\\"10\\" maxlength=\\"10\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`vue/UITextfield renders correctly - with value 1`] = `
"<div class=\\"ui-textfield\\">
  <!---->
  <div class=\\"ui-textfield__wrapper\\">
    <!----> <input id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" type=\\"text\\" class=\\"ui-textfield__wrapper__field\\">
    <!---->
  </div>
  <!---->
</div>"
`;
